orange/orange.yaml
kind: Pod
apiVersion: v1
metadata:
  name: orange-app
  labels:
    app: orange
spec:
  containers:
    - name: orange-app
      image: hashicorp/http-echo
      args:
        - "-text=orange"
