orange/ingress-orange.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fruits-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /orange
            backend:
              serviceName: orange-service
              servicePort: 5678
